# Repositories

glog_demo/: CMakeLists.txt  main.cpp
gtest_demo/: CMakeLists.txt  main.cpp
gtest_demo/add_src/: CMakeLists.txt  demo_class.cpp  demo_class.hpp
gtest_demo/add_test/: CMakeLists.txt
gtest_demo/add_test/basic_test/: CMakeLists.txt  basic_check.cpp
server_API/upload_image_demo/: main.cpp  upload_image_demo.php
tf_demo_code/2D_car/: DDPG.py  collision.py
tf_demo_code/2D_car/continuous/: DDPG.ckpt.data-00000-of-00001  DDPG.ckpt.index
tf_demo_code/English2German-seq2seq/: run.py  seq2seq.py
tf_demo_code/Spam Prediction-RNN/: run.py
tf_demo_code/Stylenet/: run.py
tf_demo_code/cifar10-cnn/: run.py
tf_demo_code/gap_filling-LSTM/: LSTM_model.py  run.py
tf_demo_code/mnist-cnn/: README  run.py
tf_demo_code/mnist-highlevel_API/: conver_to_records.py  run.py
tf_demo_code/phish/: phish_net.py  run.py
tf_demo_code/phish/dnn_tools/: base_data_iterator.py  base_net.py  data_reader.py  estimator.py  loss.py  models.py  score.py  train_op.py
tf_demo_code/phish/nlp_tools/: best_seq_len.py  vocab.py
tf_demo_code/phish/test/: data_test  data_train
tf_demo_code/sentence_Similarity-BILSTM/: run.py  siamese_similarity_model.py
unix_network_prog/echo/: CMakeLists.txt  client_main.cpp  server_main.cpp
unix_network_prog/echo_UDP/: client_main.cpp  help.cpp  help.hpp  server_main.cpp
unix_network_prog/time_out_demo/: CMakeLists.txt  client_main.cpp  help.cpp  help.hpp  server_main.cpp
upload_image_demo/: CMakeLists.txt  upload_image_demo.html
(+20 files in other folders)
